syntax = "proto3";

package v1;

option go_package = "/consensus/ibft2/proto";

import "google/protobuf/empty.proto";

service Operator {
    rpc GetSnapshot(SnapshotReq) returns (Snapshot);
    rpc Propose(Candidate) returns (google.protobuf.Empty);
    rpc Candidates(google.protobuf.Empty) returns (CandidatesResp);
}

message SnapshotReq {
    bool latest = 1;
    uint64 number = 2;
}

message Snapshot {
    repeated Validator validators = 1;

    uint64 number = 2;

    string hash = 3;

    repeated Vote votes = 4;
    
    message Validator {
        string address = 1;
    }

    message Vote {
        string validator = 1;
        string proposed = 2;
        bool auth = 3;
    }
}

message ProposeReq {
    string address = 1;
    bool auth = 2;
}

message CandidatesResp {
    repeated Candidate candidates = 1;
}

message Candidate {
    string address = 1;
    bool auth = 2;
}
